syntax = "proto3";
package ibc.lightclients.corda.v1;

option go_package = "github.com/hyperledger-labs/yui-corda-ibc/go/x/ibc/light-clients/xx-corda/types";

import "ibc/applications/transfer/v1/tx.proto";
import "ibc/lightclients/corda/v1/corda-types.proto";

service TransferMsg {
  rpc Transfer(MsgTransfer) returns (MsgTransferResponse);
}

message MsgTransfer {
  ibc.applications.transfer.v1.MsgTransfer request = 1;
  StateRef base_id = 2;
}

message MsgTransferResponse {
  ibc.applications.transfer.v1.MsgTransferResponse response = 1;
  bytes proof = 2;
  uint64 sequence = 3;
}
